2010-01-21  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include strptime in the list.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include rename in the list.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include rmdir in the list.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include c-strcase in the list.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include getopt-gnu in the list.

2010-01-17  Michael Goffioul <michael.goffioul@gmail.com>

	* bootstrap.conf: Add round module.
	* configure.ac: Allow to use MSVC with *mingw* build host. Check for
	opendir in -ldirent. Add -ladvapi32 to LIBS.

2010-01-15  John W. Eaton  <jwe@octave.org>

	* NEWS: Edit.

2010-01-15  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* configure.ac: Handle --enable-docs.  Print warning in summary
	if building documentation is disabled.
	* Makefile.am (SUBDIRS): Use @DOCDIR@ instead of doc.
	(dist-hook): New target, conditional on AMCOND_BUILD_DOCS.

2010-01-09  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for nlink_t.
	(AH_BOTTOM): Don't define nlink_t here.

2010-01-07  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for times.
	* bootstrap.conf (gnulib_modules): Include times in the list.

2010-01-07  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for gettimeofday, or whether
	gettimeofday accepts one or two arguments.
	* bootstrap.conf (gnulib_modules): Include gettimeofday in the list.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Include mkfifo in the list.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* bootstrap.conf (gnulib_modules): Remove nonexistent fstat module.

2009-12-22  Rik <octave@nomad.inbox5.com>
