@@ -33,6 +33,7 @@ gnulib_modules="
   strftime
   strptime
   times
+  unlink
   round
 "
 
