@@ -833,17 +833,13 @@ file_ops::unlink (const std::string& name, std::string& msg)
 
   int status = -1;
 
-#if defined (HAVE_UNLINK)
-  status = ::unlink (name.c_str ());
+  status = octave_unlink (name.c_str ());
 
   if (status < 0)
     {
       using namespace std;
       msg = ::strerror (errno);
     }
-#else
-  msg = NOT_SUPPORTED ("unlink");
-#endif
 
   return status;
 }
