@@ -71,6 +71,8 @@ extern "C" OCTINTERP_API int octave_strncasecmp (const char *s1, const char *s2,
 
 extern "C" OCTAVE_API mode_t octave_umask (mode_t);
 
+extern "C" OCTAVE_API int octave_unlink (const char *name);
+
 template <typename T>
 T
 octave_read_value (std::istream& is)
